<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMK ANNUR</string>
    <string name="welcome_back">Selamat Datang Kembali</string>
    <string name="login_to_account">Masuk ke Akun</string>
    <string name="role_description">NISN (Siswa) - NIP (Guru) - No HP (Ortu)</string>
    <string name="role_guru">Guru</string>
    <string name="role_siswa">Siswa</string>
    <string name="role_ortu">Ortu</string>
    <string name="hint_id">NIP / NISN / NO HP</string>
    <string name="hint_password">PASSWORD</string>
    <string name="login_button">Masuk</string>
    <string name="need_help">Butuh bantuan? </string>
    <string name="click_here">Klik disini</string>
    <string name="copyright">© 2026 VideaClass.com</string>
    <string name="label_ppdb_title">(SPMB) PENDAFTARAN SISWA BARU</string>
    <string name="label_ppdb_sub">Daftar Online Sekarang</string>
    <string name="label_login_system">MASUK KE SISTEM SEKOLAH</string>
    <string name="tagline_splash">Smart\nSchool\nEcosystem</string>
    <string name="sub_tagline_splash">More Than Education, Growing Minds &amp; Shaping Character</string>
    <string name="official_partner">Official Partner</string>
    <string name="videa_class">VideaClass</string>
    <string name="auto_login_timer">Masuk otomatis dalam %d detik…</string>
    <string name="exam_keyboard_label">Keyboard Videa</string>
    <string name="exam_keyboard_subtype_label">Bahasa Indonesia (Ujian)</string>
</resources>
